# front-run-vanilla

./: README.md
front-run-vanilla/: .env.example  .gitignore  Cargo.toml  GREYPAPER.md  Makefile  README.md  setup.sh
front-run-vanilla/.devcontainer/: devcontainer.json  post-create.sh
front-run-vanilla/.github/: copilot-instructions.md
front-run-vanilla/.github/workflows/: ci.yml
front-run-vanilla/benches/: orderbook_bench.rs
front-run-vanilla/config/: backtest.toml  paper_trading.toml  production.toml
front-run-vanilla/src/: lib.rs  main.rs
front-run-vanilla/src/backtest/: engine.rs  mod.rs
front-run-vanilla/src/exchange/: mod.rs
front-run-vanilla/src/exchange/binance/: auth.rs  mod.rs  rest.rs  types.rs  websocket.rs
front-run-vanilla/src/risk/: limits.rs  mod.rs  position.rs
front-run-vanilla/src/strategy/: execution.rs  mod.rs
front-run-vanilla/src/strategy/signals/: composite.rs  flow.rs  imbalance.rs  mod.rs
front-run-vanilla/src/utils/: config.rs  logger.rs  mod.rs
